feat: Add logistics solutions section with detailed descriptions and calls to action

--- a/translations/en.json
+++ b/translations/en.json
@@ -727,6 +727,15 @@
         "endToEnd": "End-to-End Logistics Support"
       }
     },
+     "logisticsSolutions": {
+      "title": "Seamless Logistics & Fulfilment Solutions Across Europe and the UK",
+      "description": "At MMCore, we provide end-to-end logistics solutions tailored to your business needs.",
+      "subtitle": "Welcome to MMCore, your trusted partner in logistics and supply chain solutions. Based in the Netherlands, we specialize in connecting brands, manufacturers, and logistics providers with the right partners for e-commerce fulfilment, warehousing, shipping, air cargo, and customs clearance. This to ensuring efficiency at every stage",
+      "conclusion": "With MMCore, you gain a trusted logistics partner that helps streamline your operations, expand your reach, and optimize your supply chain. Let's connect and move your business forward.",
+      "optimize": "Optimize Your Fulfilment Today",
+      "getStarted": "Get Started Today",
+      "learnMore": "Learn More About Our Services"
+    },
     "network": {
       "title": "Extensive European Network",
       "description": "With our extensive 3PL and 4PL network across Europe and the UK, we help businesses streamline operations, reduce costs, and improve efficiency. Whether you're looking for 3PL or 4PL logistics support, we leverage our strong network across Europe and the UK to find the perfect fit for your business needs."
